[LARGE] Fixed bug #543162. Fixed failing EMF tests on Windows. Parameterised parallel allOf* in AbstractEmfModel. Optimised parallel first-order operations, parallel EVL and parallel ECL to use executors directly. nMatch operation supports at least / at most semantics. ECL tests are more thorough. Grammar now allows multiple lambda expressions in operation calls, separated using parentheses. Increased memory limit for plugged in test suite to allow for all tests to be run.